v.1.1.6 add option changeGetUrl

--- a/demo/index.html
+++ b/demo/index.html
@@ -46,6 +46,7 @@
         submitTimeout: true,
         delayBeforeSend: 650,
         autoSubmit: true,
+        changeGetUrl: false,
         response: data => {
             console.log(data)
         }
