--- a/demo/sp-form-data-default-synchronize.html
+++ b/demo/sp-form-data-default-synchronize.html
@@ -50,7 +50,7 @@
     </label>
 </form>
 
-<script src="../sp-form-data.js"></script>
+<script src="../dist/spFormData.min.js"></script>
 <script>
     new SPFormData('#filter, #pagination', {
         submitTimeout: true,
