--- a/demo/sp-form-data-default.html
+++ b/demo/sp-form-data-default.html
@@ -40,7 +40,7 @@
     <input type="submit" value="submit">
 </form>
 
-<script src="../sp-form-data.js"></script>
+<script src="../dist/spFormData.js"></script>
 <script>
     new SPFormData('#filter', {
         submitTimeout: true,
