--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,14 @@
 </head>
 <body>
 
+<h1>Menu</h1>
+<a href="index.html">Default</a>
+<br>
+<a href="sync.html">Synchronization</a>
+
+<hr>
+
+<h2>Form</h2>
 <form id="filter">
     <label>
         <input type="text" name="search" placeholder="Search...">
@@ -42,15 +50,19 @@
 
 <script src="../dist/spFormData.js"></script>
 <script>
-    new SPFormData('#filter', {
+    let spFD = new SPFormData('#filter', {
         submitTimeout: true,
         delayBeforeSend: 650,
         autoSubmit: true,
         changeGetUrl: true,
-        response: data => {
-            console.log(data)
-        }
+        // response: data => {
+        //     console.log(data)
+        // }
     });
+
+    spFD.response(data => {
+        console.log(data)
+    })
 </script>
 </body>
 </html>
