--- a/demo/sync.html
+++ b/demo/sync.html
@@ -6,7 +6,14 @@
 </head>
 <body>
 
-<h1>Form Filter</h1>
+<h1>Menu</h1>
+<a href="index.html">Default</a>
+<br>
+<a href="sync.html">Synchronization</a>
+
+<hr>
+
+<h2>Form Filter</h2>
 <form id="filter">
     <label>
         <input type="text" name="search" placeholder="Search...">
@@ -43,21 +50,21 @@
 
 <hr>
 
-<h1>Form Pagination</h1>
+<h2>Form Pagination</h2>
 <form id="pagination">
     <label>
         <input type="text" name="paged" placeholder="" value="1">
     </label>
 </form>
 
-<script src="../dist/spFormData.min.js"></script>
+<script src="../dist/spFormData.js"></script>
 <script>
     new SPFormData('#filter, #pagination', {
         submitTimeout: true,
         delayBeforeSend: 650,
         autoSubmit: true,
         changeGetUrl: true,
-        formSynchronization: true,
+        formSync: true,
         response: data => {
             console.log(data)
         }
