--- a/demo/sync.html
+++ b/demo/sync.html
@@ -14,7 +14,7 @@
 <hr>
 
 <h2>Form Filter</h2>
-<form id="filter">
+<form id="filter-sync">
     <label>
         <input type="text" name="search" placeholder="Search...">
     </label>
@@ -51,24 +51,11 @@
 <hr>
 
 <h2>Form Pagination</h2>
-<form id="pagination">
+<form id="pagination-sync">
     <label>
         <input type="text" name="paged" placeholder="" value="1">
     </label>
 </form>
 
-<script src="../dist/spFormData.js"></script>
-<script>
-    new SPFormData('#filter, #pagination', {
-        submitTimeout: true,
-        delayBeforeSend: 650,
-        autoSubmit: true,
-        changeGetUrl: true,
-        formSync: true,
-        response: data => {
-            console.log(data)
-        }
-    });
-</script>
 </body>
 </html>
