-fixed bugs -added new parameters -added new methods

--- a/demo/sync.html
+++ b/demo/sync.html
@@ -6,13 +6,6 @@
 </head>
 <body>
 
-<h1>Menu</h1>
-<a href="index.html">Default</a>
-<br>
-<a href="sync.html">Synchronization</a>
-
-<hr>
-
 <h2>Form Filter</h2>
 <form id="filter-sync">
     <label>
@@ -52,10 +45,14 @@
 
 <h2>Form Pagination</h2>
 <form id="pagination-sync">
+    <button class="prev-page">Prev</button>
     <label>
         <input type="text" name="paged" placeholder="" value="1">
     </label>
+    <button class="next-page">Next</button>
 </form>
+
+<button class="reset-sync">Reset</button>
 
 </body>
 </html>
