--- a/demo/index.html
+++ b/demo/index.html
@@ -6,13 +6,6 @@
 </head>
 <body>
 
-<h1>Menu</h1>
-<a href="index.html">Default</a>
-<br>
-<a href="sync.html">Synchronization</a>
-
-<hr>
-
 <h2>Form</h2>
 <form id="filter">
     <label>
@@ -48,5 +41,6 @@
     <input type="submit" value="submit">
 </form>
 
+<button class="reset">Reset</button>
 </body>
 </html>
