--- a/demo/sync.html
+++ b/demo/sync.html
@@ -45,11 +45,11 @@
 
 <h2>Form Pagination</h2>
 <form id="pagination-sync">
-    <div class="prev-page">Prev</div>
+    <button class="prev-page">Prev</button>
     <label>
         <input type="text" name="paged" placeholder="" value="1">
     </label>
-    <div class="next-page">Next</div>
+    <button class="next-page">Next</button>
 </form>
 
 <button class="reset-sync">Reset</button>
