--- a/demo/sync.html
+++ b/demo/sync.html
@@ -3,43 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <title>SPFormData</title>
+
+    <style>
+        select {
+            width: 200px;
+        }
+
+        .group {
+            margin-bottom: 30px;
+        }
+    </style>
 </head>
 <body>
 
 <h2>Form Filter</h2>
+
 <form id="filter-sync">
-    <label>
-        <input type="text" name="search" placeholder="Search...">
-    </label>
+    <label for="text-field">Text field:</label>
+    <input type="text" id="text-field" name="text" required>
+
+    <br>
+    <br>
+
+    <label for="email-field">Email field:</label>
+    <input type="email" id="email-field" name="email" required>
+
+    <br>
+    <br>
+
+    <label for="password-field">Password field:</label>
+    <input type="password" id="password-field" name="password" required>
+
+    <br>
+    <br>
 
     <label>
-        <input type="radio" name="date" value="ASC"/>
-        <span>Date: Ascending</span>
+        <span>Checkbox 1</span>
+        <input type="checkbox" name="checkbox" value="1"/>
     </label>
+    <br>
     <label>
-        <input type="radio" name="date" value="DESC"/>
-        <span>Date: Descending</span>
+        <span>Checkbox 2</span>
+        <input type="checkbox" name="checkbox" value="2"/>
+    </label>
+    <br>
+    <label>
+        <span>Checkbox 3</span>
+        <input type="checkbox" name="checkbox" value="3"/>
+    </label>
+    <br>
+    <label>
+        <span>Checkbox 4</span>
+        <input type="checkbox" name="checkbox" value="4"/>
     </label>
 
-    <label>
-        <span>1</span>
-        <input type="checkbox" name="option" value="1"/>
-    </label>
-    <label>
-        <span>2</span>
-        <input type="checkbox" name="option" value="2"/>
-    </label>
-    <label>
-        <span>3</span>
-        <input type="checkbox" name="option" value="3"/>
-    </label>
-    <label>
-        <span>4</span>
-        <input type="checkbox" name="option" value="4"/>
-    </label>
+    <br>
+    <br>
 
+    <div>Radio:</div>
+    <input type="radio" id="radio-button1" name="radio" value="1">
+    <label for="radio-button1">Option 1</label>
+    <input type="radio" id="radio-button2" name="radio" value="2">
+    <label for="radio-button2">Option 2</label>
+    <input type="radio" id="radio-button3" name="radio" value="3">
+    <label for="radio-button3">Option 3</label>
+
+    <br>
+    <br>
+
+    <label for="dropdown">Dropdown:</label>
+    <select id="dropdown" name="dropdown">
+        <option value="">No Option</option>
+        <option value="1">Option 1</option>
+        <option value="2">Option 2</option>
+        <option value="3">Option 3</option>
+    </select>
+
+    <br>
+    <br>
+
+    <label for="textarea">Multiline text field:</label>
+    <textarea id="textarea" name="textarea"></textarea>
+
+    <br>
+    <br>
+
+    <label for="range">Value range:</label>
+    <input type="range" id="range" name="range" min="0" max="100" step="1">
+
+    <br>
+    <br>
+
+    <label for="datetime">Date and time:</label>
+    <input type="datetime-local" id="datetime" name="datetime">
+
+    <br>
+    <br>
+
+    <label for="color">Color palette:</label>
+    <input type="color" id="color" name="color">
+
+    <br>
+    <br>
+
+    <!-- Submit button, needed if option autoSubmit: false -->
     <input type="submit" value="submit">
 </form>
+
+
 
 <hr>
 
