--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@
 
     <label>
         <span>1</span>
-        <input type="checkbox" name="option" value="1"/>
+        <input type="checkbox" name="option" value="1" checked/>
     </label>
     <label>
         <span>2</span>
