--- a/demo/sync.html
+++ b/demo/sync.html
@@ -89,7 +89,7 @@
     <br>
 
     <label for="range">Value range:</label>
-    <input type="range" id="range" name="range" min="0" max="100" step="1" value="">
+    <!-- <input type="range" id="range" name="range" min="0" max="100" step="1" value=""> -->
 
     <br>
     <br>
@@ -101,13 +101,13 @@
     <br>
 
     <label for="color">Color palette:</label>
-    <input type="color" id="color" name="color" value="">
+    <!-- <input type="color" id="color" name="color" value=""> -->
 
     <br>
     <br>
 
     <label for="file">File field:</label>
-    <input type="file" id="file" name="file">
+    <input type="file" id="file" name="file_multiple" multiple>
 
     <br>
     <br>
