--- a/demo/index.html
+++ b/demo/index.html
@@ -13,6 +13,14 @@
     </label>
 
     <label>
+        <input type="text" id="text-field" name="text" placeholder="Text field">
+    </label>
+
+    <label>
+        <input type="email" id="email-field" name="email" placeholder="Email">
+    </label>
+
+    <label>
         <input type="radio" name="date" value="ASC"/>
         <span>Date: Ascending</span>
     </label>
