--- a/demo/index.html
+++ b/demo/index.html
@@ -8,17 +8,17 @@
 
 <h2>Form</h2>
 <form id="filter">
-    <label>
-        <input type="text" name="search" placeholder="Search...">
-    </label>
+    <label for="page-field">Page</label>
+    <input type="text" id="page-field" name="page" value="1">
 
-    <label>
-        <input type="text" id="text-field" name="text" placeholder="Text field">
-    </label>
+    <label for="post-field">Page Post</label>
+    <input type="text" id="post-field" name="post" value="1">
 
-    <label>
-        <input type="email" id="email-field" name="email" placeholder="Email">
-    </label>
+    <label for="search-field">Search</label>
+    <input type="text" id="search-field" name="search" placeholder="Search...">
+
+    <label for="email-field">Email</label>
+    <input type="email" id="email-field" name="email" placeholder="Email">
 
     <label>
         <input type="radio" name="date" value="ASC"/>
@@ -45,10 +45,26 @@
         <span>4</span>
         <input type="checkbox" name="option" value="4"/>
     </label>
+    <label>
+        <select name="size">
+            <option value="">All</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+        </select>
+    </label>
 
     <input type="submit" value="submit">
 </form>
 
 <button class="reset">Reset</button>
+
+<!--<form class="second-form">
+    <label for="page-field">Page</label>
+    <input type="text" id="page-field" name="page" value="1">
+</form>-->
+
 </body>
 </html>
